--- a/generic/AutomationDocument.yaml
+++ b/generic/AutomationDocument.yaml
@@ -23,4 +23,4 @@ mainSteps:
       Parameters:
         commands:
           - |
-            kubectl get jobs -n ta-ta -o go-template --template '{{range .items}}{{.metadata.name}} {{.metadata.creationTimestamp}}{{"\n"}}{{end}}' | awk '$2 <= "'$(date -d'now-6 hours' -Ins --utc | sed 's/+0000/Z/')'" { print $1 }' | xargs --no-run-if-empty kubectl delete job -n ta-ta
+            kubectl get jobs -n <namespace> -o go-template --template '{{range .items}}{{.metadata.name}} {{.metadata.creationTimestamp}}{{"\n"}}{{end}}' | awk '$2 <= "'$(date -d'now-6 hours' -Ins --utc | sed 's/+0000/Z/')'" { print $1 }' | xargs --no-run-if-empty kubectl delete job -n <namespace>
